<resources>
    <string name="app_name">Android ITPlus Demo</string>
    <string name="activity_control_name">Demo control</string>
    <string name="activity_control_name2">Quản lý nhân viên</string>
    <string name="activity_quanlykhachhang">Quản lý khách hàng</string>
    <string name="activity_quanlysinhvien">Quản lý sinh viên</string>
    <string name="title_activity_navigation_draw">NavigationDrawActivity</string>
    <string name="navigationdrawer_open">Mở navigation drawer</string>
    <string name="navigationdrawer_close">Đóng </string>
    <string name="nav_header_title">DEMO ANDROID</string>
    <string name="nav_header_subtitle">minhtuannb287@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cấu hình</string>

    <string name="send_to">Gửi</string>

    <string name="menu_home">Home</string>
    <string name="menu_evenhandler">Event Handler</string>
    <string name="menu_control">Control demo</string>
    <string name="menu_control2">Control demo 2</string>
    <string name="menu_contrainlayout">Demo Contrain layout</string>
    <string name="menu_circlelayout">Circle layout</string>
    <string name="menu_cardview">Cardview dashboard demo</string>
    <string name="menu_activity">Activity demo</string>
    <string name="menu_intent">Intent demo</string>
    <string name="menu_fragement">Fragement demo</string>
    <string name="menu_imageviewer">Load image</string>
    <string name="menu_horizontallistview">Horizontal listview demo</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_intent">IntentActivity</string>

    <!-- Common Action -->
    <string name="common_action_close">Đóng</string>
    <string name="common_action_save">Lưu</string>
    <string name="common_action_add">Thêm mới</string>
    <string name="common_action_edit">Chỉnh sửa</string>
    <string name="common_action_delete">Xóa</string>

    <!-- Menu Item -->
    <string name="menu_item_search">Tìm kiếm</string>
    <string name="menu_item_about_app">Giới thiệu</string>
    <string name="menu_item_help">Trợ giúp</string>
    <string name="menu_item_version_app">Phiên bản %s</string>

    <!-- Main Screen -->
    <string name="mainscreen_add_catergory">Thêm chủ đề</string>
    <string name="mainscreen_empty_note">Danh sách ghi chú trống, bạn hãy thêm vào ghi chú mới</string>

    <!-- Note detail screen -->
    <string name="note_detail_share">Chia sẻ</string>
    <string name="note_detail_delete">Xóa</string>
    <string name="note_detail_category">Chủ đề</string>
    <string name="note_detail_note_detail">Chi tiết</string>
    <string name="note_detail_other_information">Thông tin khác</string>
    <string name="note_detail_map_location">Vị trí</string>
    <string name="note_detail_note_name_hint">Tên</string>
    <string name="note_detail_note_detail_hint">Mô tả</string>
    <string name="note_detail_add_note_hint">Ghi chú (Bạn có thể thêm sau)</string>
    <string name="note_detail_address_hint">Địa chỉ</string>


    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <array name="departments">
        <item>Kỹ thuật</item>
        <item>Chăm sóc khách hàng</item>
        <item>Nghiên cứu và phát triển</item>
        <item>Marketing</item>
        <item>Nhân sự</item>
    </array>

    <string-array name="entries_list_preference">
        <item>Cấu hình 1</item>
        <item>Cấu hình 2</item>
        <item>Cấu hình 3</item>
    </string-array>

    <string-array name="entryvalues_list_preference">
        <item>Giá trị 1</item>
        <item>Giá trị 2</item>
        <item>Giá trị 3</item>
    </string-array>

    <string name="first">Tiêu đề bài viết 1</string>
    <string name="second">Tiêu đề bài viết 2</string>
    <string name="third">Tiêu đề bài viết 3</string>
    <string name="long_latin">
        FAB là một nút bấm đặc biệt, chúng thường được biểu diễn bởi hình tròn với biểu tượng, nó nổi trên bề mặt các giao diện thiết kế, thường thì tùy ngữ cảnh bấm vào nó để thực hiện các hành động tương ứng.Nguyên tắc thiết kế giao diện có sử dụng FAB theo triết lý Materail Design được Google đề xuất ở đây: FAB Design. Thường thì bạn sử dụng FAB tùy thuộc ngữ cảnh, và FAB là thao tác chủ đạo đưa ra cho người dùng thực hiện. Ví dụ bạn đang ở màn hình xem danh sách email, có thể xuất hiện FAB để bấm vào đó tạo một Email mới (nếu cho rằng đây là thao tác người dùng hay sử dụng) ...
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video_view">VideoViewActivity</string>


    <!--Game Tic Tac Toe-->
    <string name="btn_exit">QUIT</string>
    <string name="btn_start1">One Player Game</string>
    <string name="btn_start2">Two Players Game</string>
    <string name="btn_clear">CLEAR</string>
    <string name="win0">NOBODY WINS</string>
    <string name="win1_single">YOU LOST</string>
    <string name="win2_single">YOU WIN</string>
    <string name="win1_multiple">PLAYER 1 WINS</string>
    <string name="win2_multiple">PLAYER 2 WINS</string>
    <string name="btn_sound">SOUND</string>
    <string name="btn_mute">MUTE</string>
</resources>
