<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_evenhandler"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_evenhandler" />
        <item
            android:id="@+id/nav_intent"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_intent" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_fragement"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_fragement" />
       <group >
           <item
               android:id="@+id/nav_list_fragement"
               android:icon="@drawable/ic_menu_gallery"
               android:title="List Fragment" />
       </group>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
